<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Multi Screen</string>
    <string name="item2">Item 2</string>
    <string name="item_1">Item 1</string>
    <string name="item_3">Item 3</string>
    <string name="welcome_to_food_world">Welcome to Food World</string>
    <string name="place_order">Place Order</string>
    <string name="todo">TODO</string>
    <string name="please_wait">Please wait</string>
    <string name="thank_you">Thank You!!!</string>
    <string name="todo2" tools:ignore="DuplicateDefinition">TODO</string>
</resources>